--- a/src/popup.html
+++ b/src/popup.html
@@ -13,7 +13,7 @@
         <img src="../images/icon48.png" width="48" height="48" class="me-3" />
         <h4>Key Retriever</h4>
       </div>
-      <div id="outdatedVersion" class="alert alert-danger d-flex align-items-center mt-1 mb-0 display-none" role="alert" style="font-size: 12px;">
+      <div id="outdatedVersion" class="alert alert-danger flex align-items-center mt-1 mb-0 display-none" role="alert" style="font-size: 12px;">
         <i class="fa-solid fa-circle-exclamation fa-lg me-2"></i>
         <div>There is an update available. Go to <a href="https://github.com/Room-Elephant/extension-chrome-key-retriever" target="_blank" class="alert-link">key retriever github</a> to download the newest version.</div>
         <button type="button" class="btn-close ms-2" data-bs-dismiss="alert" aria-label="Close"></button>
