feat: add google analytics config

--- a/src/popup.html
+++ b/src/popup.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="popup.css" />
     <meta charset="utf-8" />
   </head>
-
   <body>
     <header>
       <div class="flex flex-row align-items-center">
@@ -108,7 +107,7 @@
       </div>
     </footer>
     <script src="common.js"></script>
-
+    <script src="./scripts/google-analytics.js"></script>
     <script src="./handler/operation/remote.js"></script>
     <script src="./handler/operation/cookie.js"></script>
     <script src="./handler/valueReader.js"></script>
@@ -119,6 +118,7 @@
     <script src="components.js"></script>
     <script src="items.js"></script>
     <script src="page.js"></script>
+    <script src="versionController.js"></script>
     <script src="popup.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
   </body>
