initial render decouple

--- a/src/popup.html
+++ b/src/popup.html
@@ -114,6 +114,8 @@
     <script src="./handler/valueReader.js"></script>
     <script src="./handler/valueWriter.js"></script>
     <script src="./handler/store.js"></script>
+    <script src="./handler/versionController.js"></script>
+    
 
     <script src="manager.js"></script>
     <script src="components.js"></script>
