add key retriever for analytics

--- a/src/popup.html
+++ b/src/popup.html
@@ -107,7 +107,7 @@
       </div>
     </footer>
     <script src="common.js"></script>
-    <script src="./scripts/google-analytics.js"></script>
+    <script src="./handler/analytics.js"></script>
     <script src="./handler/operation/remote.js"></script>
     <script src="./handler/operation/cookie.js"></script>
     <script src="./handler/valueReader.js"></script>
