--- a/src/popup.html
+++ b/src/popup.html
@@ -74,17 +74,17 @@
             </div>
           </div>
           <div class="form-floating mb-3">
-            <input id="key" type="text" class="form-control" name="key" placeholder="e.g. SSID" required />
-            <label for="key" class="form-label">Key</label>
+            <input id="key" type="text" class="form-control" name="key" required value="" />
+            <label for="key" class="form-label">Key <span style="color: red">*</span></label>
             <div class="invalid-feedback">Please choose a key.</div>
           </div>
           <div class="form-floating mb-3">
-            <input id="subKey" type="text" class="form-control" name="subKey" placeholder="e.g. cachedValue" />
+            <input id="subKey" type="text" class="form-control" name="subKey" />
             <label for="subKey" class="form-label">Sub-key</label>
           </div>
           <div class="form-floating mb-3">
-            <input id="alias" type="text" class="form-control" name="alias" placeholder="e.g. Auth token" required />
-            <label for="alias" class="form-label">Alias</label>
+            <input id="alias" type="text" class="form-control" name="alias" required />
+            <label for="alias" class="form-label">Alias <span style="color: red">*</span></label>
             <div class="invalid-feedback">Please choose an alias for your key.</div>
           </div>
         </form>
