--- a/src/popup.html
+++ b/src/popup.html
@@ -8,6 +8,10 @@
   </head>
   <body>
     <header>
+      <button id="refreshBtn" type="button" class="btn btn-outline-secondary refreshBtn">
+        <i class="fa-solid fa-arrows-rotate"></i>
+      </button>
+
       <div class="flex flex-row align-items-center">
         <img src="../images/icon48.png" width="48" height="48" class="me-3" />
         <h4>Key Retriever</h4>
