fix: fix scroll to section

--- a/src/popup.html
+++ b/src/popup.html
@@ -13,7 +13,7 @@
           <img src="../images/icon48.png" width="48" height="48" class="me-3" />
           <h4>Key Retriever</h4>
         </div>
-        <button id="refreshBtn" type="button" class="btn" style="color: var(--green);">
+        <button id="refreshBtn" type="button" class="btn" style="color: var(--green)">
           <i class="fa-solid fa-arrows-rotate fa-lg"></i>
         </button>
       </div>
@@ -34,7 +34,7 @@
         <button type="button" class="btn-close ms-2" data-bs-dismiss="alert" aria-label="Close"></button>
       </div>
     </header>
-    <section class="mt-1" style="min-height: 5em">
+    <section class="mt-1">
       <div id="emptyPage" class="flex flex-col align-items-center my-3 display-none">
         <img class="mb-4" src="../images/empty-page.jpg" width="200" height="75" />
         <em style="color: var(--medium-gray)">Key retriever is waiting for your new keys</em>
