feat: fix imports for common and session icon

--- a/src/popup.html
+++ b/src/popup.html
@@ -55,7 +55,7 @@
                   checked
                 />
                 <label class="btn btn-outline-primary" for="sessionStorage">
-                  <i class="fa-sharp fa-regular fa-folder-open" style="color: var(--yellow)"></i>
+                  <i class="fa-sharp fa-regular fa-folder-open fa-lg" style="color: var(--yellow)"></i>
                   Session storage
                 </label>
                 <input
