feat: migrate to ES6 modules (#62)

--- a/src/popup.html
+++ b/src/popup.html
@@ -55,7 +55,7 @@
                   checked
                 />
                 <label class="btn btn-outline-primary" for="sessionStorage">
-                  <i class="fa-sharp fa-regular fa-folder-open" style="color: var(--yellow)"></i>
+                  <i class="fa-sharp fa-regular fa-folder-open fa-lg" style="color: var(--yellow)"></i>
                   Session storage
                 </label>
                 <input
@@ -111,21 +111,7 @@
         </button>
       </div>
     </footer>
-    <script src="common.js"></script>
-    <script src="./handler/analytics.js"></script>
-    <script src="./handler/operation/remote.js"></script>
-    <script src="./handler/operation/cookie.js"></script>
-    <script src="./handler/valueReader.js"></script>
-    <script src="./handler/valueWriter.js"></script>
-    <script src="./handler/store.js"></script>
-    <script src="./handler/versionController.js"></script>
-
-    <script src="manager.js"></script>
-    <script src="components.js"></script>
-    <script src="items.js"></script>
-    <script src="page.js"></script>
-
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
