add domain to add item

--- a/src/popup.html
+++ b/src/popup.html
@@ -78,6 +78,10 @@
               </div>
             </div>
           </div>
+          <div id="domainField" class="form-floating mb-3 display-none">
+            <input id="domain" type="text" class="form-control" name="domain" />
+            <label for="domain" class="form-label">Domain</label>
+          </div>
           <div class="form-floating mb-3">
             <input id="key" type="text" class="form-control" name="key" required value="" />
             <label for="key" class="form-label">Key <span style="color: red">*</span></label>
