--- a/src/index.html
+++ b/src/index.html
@@ -111,7 +111,7 @@
         </button>
       </div>
     </footer>
-    <script type="module" src="popup.js"></script>
+    <script type="module" src="index.js"></script>
     <script src="./assets/bootstrap/js/bootstrap.min.js"></script>
   </body>
 </html>
